# fastchess

./: .gitignore  LICENSE  MANIFEST.in  README.md  fastchess.c  pyproject.toml  setup.py
.github/workflows/: publish.yml
